--- a/src/Forms.css
+++ b/src/Forms.css
@@ -1,7 +1,8 @@
 body {
   padding: 2rem;
-  border: 1px solid red;
   background: rgb(197, 196, 196);
+  display: flex;
+  justify-content: center;
 }
 * {
   box-sizing: border-box;
@@ -35,19 +36,29 @@ body {
 }
 
 .allforms,
-.firstform,
-.secondform,
 form {
   display: flex;
   flex-direction: column;
   gap: 1rem;
   color: #f9f6ee;
+  width: 400px;
 }
 .firstform,
-.secondform {
+.secondform,
+.thirdform {
   background: #00522e;
   border-radius: 1rem;
 }
+.dateinandout {
+  display: flex;
+  justify-content: space-between;
+}
+.dateinandout label {
+  display: flex;
+  flex-direction: column;
+  width: 45%;
+}
+
 input {
   display: block;
   font-size: 1.25rem;
@@ -68,39 +79,14 @@ input {
   margin-top: 0.5rem;
 }
 
-.mycvBlock,
-.mycv {
-  display: flex;
-  flex-direction: column;
+.hideform {
+  height: 0px;
+  padding: 0px;
   overflow: hidden;
+  opacity: 0;
+  transition: 1s;
 }
-.mycv {
-  background: #f9f6ee;
-  border-radius: 1rem;
-
-  width: 600px;
-}
-.mycvtitle {
-  text-align: center;
-  background: #00522e;
-  color: #f9f6ee;
+.showform {
+  height: fit-content;
   padding: 1rem;
-}
-.mycvBlock {
-  gap: 0.75rem;
-  padding: 0.5rem 0 0 1rem;
-}
-.mycvBlock .data {
-  padding-left: 1rem;
-}
-.mycvBlock > .data > div > div {
-  min-height: 1.5rem;
-  margin-bottom: 0.5rem;
-}
-
-.h1style {
-  font-size: 1.75rem;
-}
-.h2style {
-  font-size: 1.25rem;
 }
