further components were created
-each form has its own component and are exported to App.jsx

--- a/src/Forms.css
+++ b/src/Forms.css
@@ -49,6 +49,9 @@ form {
   background: #00522e;
   border-radius: 1rem;
 }
+.form button {
+  background: #f9f6ee;
+}
 .dateinandout {
   display: flex;
   justify-content: space-between;
